--- a/posts/2025-06-03.md
+++ b/posts/2025-06-03.md
@@ -58,7 +58,7 @@ Here's an example that does a nullability analysis on an `httpd` dataflow (in th
     n:	138331
 49.042µs
 
-> 
+>
 ```
 This takes about 2s in datafrog, vs 8.3s here, though the datafrog example uses `(u32, u32)` data, but here with `Vec<String>` data and no compiled queries it takes only 4x longer.
 I hope to get that down in the future.
@@ -166,7 +166,7 @@ The only properties we'll use are literal equality and an arbitrary order, and u
 
 Facts are rules that have an empty body, and heads with no variables.
 We can treat facts as data, recording the list of literal strings in each position.
-Although not where we will end up, you can think of them for now as 
+Although not where we will end up, you can think of them for now as
 ```rust
 type Fact = Vec<String>;
 ```
@@ -218,7 +218,7 @@ fn main() {
                 ".list" => {
                     for (name, facts) in state.facts.iter() {
                         println!("\t{}:\t{:?}", name, facts.len());
-                    }    
+                    }
                 }
                 _ => {
                     println!("Parse failure: {:?}", text);
@@ -375,11 +375,11 @@ fn tokenize(text: &str) -> Option<Vec<Token>> {
                 ')' => Token::RParen,
                 '←' => Token::Turnstile,
                 '?' => Token::Question,
-                _ => { None? } 
+                _ => { None? }
             }
         );
     }
-    
+
     Some(result)
 }
 ```
@@ -444,7 +444,7 @@ fn parse_term<I: Iterator<Item=Token>>(tokens: &mut Peekable<I>) -> Option<Term>
         let Token::Text(term) = tokens.next()? else { None? };
         Some(Term::Var(term.clone()))
     }
-    else { 
+    else {
         let Token::Text(term) = tokens.next()? else { None? };
         Some(Term::Lit(term.clone()))
     }
@@ -702,8 +702,8 @@ We can start off on the right foot by noticing for each variable the leftmost at
 The leftmost occurrence is the last moment (right-to-left) the bound variable needs to be retained; after this moment we can discard the values.
 The rightmost occurrence tells us when a variable first enters play, which is important for other body atoms that mention the variable to know if they must plan to include it in their key columns.
 
-With this information, each body atom can look at its own variables and the leftmost and rightmost numbers to partition its columns into 
-1. dead columns that no one wants to hear about, 
+With this information, each body atom can look at its own variables and the leftmost and rightmost numbers to partition its columns into
+1. dead columns that no one wants to hear about,
 2. key columns that will need to be equated with the incoming relation,
 3. value columns that must be presented and carried on, but are not equated.
 
@@ -740,11 +740,11 @@ Join plan implementation starts through a method that looks like this:
 /// Additionally, a rule-unique identifier allows the logic to create new relation names.
 /// The `stable` argument indicates whether we need to perform a full evaluation or only the changes.
 pub fn implement_plan(
-    rule: &Rule, 
-    plan: &JoinPlan, 
-    pos: usize, 
-    stable: bool, 
-    facts: &mut Facts) 
+    rule: &Rule,
+    plan: &JoinPlan,
+    pos: usize,
+    stable: bool,
+    facts: &mut Facts)
 {
     ...
 }
@@ -1029,11 +1029,11 @@ for arg in std::env::args().skip(1) {
             }
         }
     }
-    for (name, facts) in dict { 
+    for (name, facts) in dict {
         state.facts
              .entry(name)
              .or_default()
-             .add_set(facts); 
+             .add_set(facts);
     }
 }
 state.update();
@@ -1055,7 +1055,7 @@ mcsherry@gallustrate datatoad % cargo run --release -- ~/Projects/datasets/grasp
         n:      138331
 39.458µs
 
-> 
+>
 ```
 Two relations, `e` and `n`, corresponding to "edges" and "nodes" respectively.
 The same will be true for the `psql` and `linux` inputs as well, for the dataflow analysis.
@@ -1091,7 +1091,7 @@ With the error fixed, and pushed to the repo, the result is
         n:      9393283
 45.375µs
 
-> 
+>
 ```
 
 We took about 15s here, which .. is a number.
@@ -1138,7 +1138,7 @@ Let's see what happens now.
         n:      138331
 23.959µs
 
-> 
+>
 ```
 This is now substantially faster, but it does still have a `.temp-0-0-in` in there.
 This is my bad.
@@ -1297,7 +1297,7 @@ We'll come back to that in a bit.
         d:      1147612
 145.333µs
 
-> 
+>
 ```
 
 Oh boy that took a while.
@@ -1351,7 +1351,7 @@ As we key in the final two rules, the system kicks into action again
         d:      1147612
 531.042µs
 
-> 
+>
 ```
 We've removed all of the `-in` temporary relations, and the process is now at 31.96GB.
 The numbers of tuples in the `-M`, `-V`, and `F` relations match their counterparts in the previous execution, so we've almost certainly produced the same thing.
@@ -1367,7 +1367,7 @@ But pleased nonetheless.
 Let's do a next unlock, and read the Zheng and Rugina more carefully.
 When they get to explaining their solution to the problem, relatively abstract up until this point, we learn a very important detail
 
-> We now present the demand-driven algorithm for answering memory may-alias queries. 
+> We now present the demand-driven algorithm for answering memory may-alias queries.
 > Given two lvalue expressions e1 and e2, the algorithm determines whether M (e1, e2) holds.
 
 They only need to produce `M` as an output!
@@ -1411,7 +1411,7 @@ Keyed in, this results in
         d:      1147612
 86.75µs
 
-> 
+>
 ```
 The `-M` and `F` counts have stayed the same, so probably still the right answer.
 The `-V` count is gone, which was the whole point.
@@ -1457,7 +1457,7 @@ Again, keying in the final two rules kick things off
         d:      1147612
 103.333µs
 
-> 
+>
 ```
 Again, a pretty nice improvement.
 
@@ -1489,7 +1489,7 @@ Now we only have to key in that last rule, and get
         d:      1147612
 34.333µs
 
-> 
+>
 ```
 We're seeing exactly the same thing, which is that the intermediate result `-M Fd` is computed twice, and is pretty chonky.
 Let's fix that.
@@ -1517,7 +1517,7 @@ As usual, the last rule kicks off the work
         d:      1147612
 31.666µs
 
-> 
+>
 ```
 And we're sitting at 5.32GB.
 That's about a 10x improvement in memory from our first attempt at the plan, and nearly a 10x improvement in running time as well.
@@ -1553,12 +1553,12 @@ I'll be reading them looking for the *simplest* way to do things, but in the fut
 
 Let's write a very simple, and really quite bad, join optimizer!
 
-### Wait, wait! 
+### Wait, wait!
 
 I need to get something out of my system about the motivation for all of this.
 And by "all of this" I mean [Datalog](https://en.wikipedia.org/wiki/Datalog).
 Why all the work for what seems like an esotoric logic programming languages?
-Are you truly excited about programs built out of Horn clauses, their minimal Herbrand models, and extensions to non-monotonic logics? 
+Are you truly excited about programs built out of Horn clauses, their minimal Herbrand models, and extensions to non-monotonic logics?
 No?
 
 Me neither.
@@ -1665,15 +1665,15 @@ pub fn rule_to_ir(rule: &Rule) -> Vec<ENode<Op>> {
             head.projection.push(column);
             match term {
                 // Variable terms record the name used.
-                Term::Var(name) => { 
+                Term::Var(name) => {
                     bind.entry(name)
                         .or_default()
-                        .push(column); 
+                        .push(column);
                 },
                 // Literal terms record the filter.
-                Term::Lit(data) => { 
+                Term::Lit(data) => {
                     head.lit_filter
-                        .push((column, data.to_string())); 
+                        .push((column, data.to_string()));
                 },
             }
         }
@@ -1693,8 +1693,8 @@ This puts together a list of `Op` instructions that I claim will perform the wor
 We are using [Polish notation](https://en.wikipedia.org/wiki/Polish_notation), aka "prefix notation", where something like
 ```rust
 vec![
-    Op::Mul(2), 
-    Op::nop(3), 
+    Op::Mul(2),
+    Op::nop(3),
     Op::Var("potato"),
     Op::nop(1),
     Op::Var("salad"),
@@ -1807,7 +1807,7 @@ We just have our list of instructions.
 ```rust
     // Time to optimize the e-graph!
     e_iterate(&mut e_graph, &[
-        &MulPermute, 
+        &MulPermute,
         &MulPartition,
         &MapPushdown,
     ]);
@@ -1816,10 +1816,10 @@ We just have our list of instructions.
 Not very clear what happened here.
 
 The tl;dr is that each of `MulPermute`, `MulPartition`, and `MapPushdown` are rules that are able to introduce new e-nodes, and equate them to other e-nodes.
-For example, `MulPermute` says that you can equate 
+For example, `MulPermute` says that you can equate
 ```
     [ Map1, Mul(k), A, B, .. Z ]
-=   
+=
     [ Map2, Mul(k), B, Z, .. Q ]
 ```
 as long as `Map1` and `Map2` are the same other than the appropriate column permutation.
@@ -1832,7 +1832,7 @@ Each of the e-nodes in the list are equivalent, and any could be used in place o
 
 Our three e-graph rules will respectively do:
 1. `MulPermute` : equate all permutations of inputs for `Mul(k)`.
-2. `MulPartition` : equate all ways you can break `Mul(k)` into 
+2. `MulPartition` : equate all ways you can break `Mul(k)` into
 3. `MapPushdown` : equate a `Map` atop a `Mul(2)` with a `Mul` atop a `Map` that keys equated columns across the inputs, and has input-local filters and projections.
 
 The code for these is a bit gnarly, and honestly I'm hoping not to use it for very long.
@@ -1857,7 +1857,7 @@ Those are the only distinct ways to use two copies of `a` and two copies of `b`.
 Admittedly, I concealed the e-class for the head.
 That's the one with all the equivalent expressions, so what does it look like?
 ```
-EClass #5:  -> [ 
+EClass #5:  -> [
     Map(Action { var_filter: [[0, 3], [2, 4], [5, 6]], proj: [1, 7], arity: 0 })[4],
     Map(Action { var_filter: [[0, 3], [2, 6], [4, 7]], proj: [1, 5], arity: 0 })[6],
     Map(Action { var_filter: [[0, 5], [2, 4], [3, 6]], proj: [1, 7], arity: 0 })[4],
@@ -1954,7 +1954,7 @@ step 6: ENode { op: Mul(2), args: [5, 5] }
 step 7: ENode { op: Map(Action { proj: [1, 3], arity: 0 }), args: [6] }
 40.2635ms
 
-> 
+>
 ```
 This gets found in wave two, at most two uncorrelated columns in any operator, and has four `Map` operators.
 Two of these are for the input and one of them is for the output.
@@ -2086,9 +2086,9 @@ To show you just how serious about names we are, here is the logic for determini
             }
         }
 ```
-The three cases are 
-1. a head rule, which must write at its own name, 
-2. a no-op transformation that can re-use the existing name, and 
+The three cases are
+1. a head rule, which must write at its own name,
+2. a no-op transformation that can re-use the existing name, and
 3. a non-trivial non-head transform, which will need a temporary name.
 
 With names in hard, we load up the input facts, if we can find them, and apply all actions.
@@ -2176,7 +2176,7 @@ I had a bunch of other bugs as well, but it runs on our complicated example.
         d:      1147612
 109.333µs
 
-> 
+>
 ```
 It's even five seconds faster, for no reason that I can explain.
 I haven't tried it on more complicated plans, for example more naively stated versions of this workload.
@@ -2383,6 +2383,401 @@ It appears we were lightly lucky, and the first 25 lists had the same length, wh
 The next step is deploying the layered trie in anger, to pilot the joins, merging, and deduplication.
 Once this is in, and running not-terribly, we can turn off the old representation and have a further reduced memory footprint.
 The layered trie is exciting to me personally, because I want to understand more about how to use this representation to represent relations that are more complex than our stolid binary relations.
+
+### Update 20-07-2025
+
+The layered trie is ready to go.
+
+It takes roughly the advertised amount of space, plus or minus, but it also goes faster!
+The layered trie representation leaves data in a more useful shape, at least more useful for us.
+We'll talk through how it works, and what the improvements look like!
+
+To get you excited, here are some before and after numbers, using the apple-to-apples row-oriented numbers, "toad-row" agaist the column-oriented (layered trie) representation, "toad-col".
+
+
+| dataflow | httpd |   psql | lnx_kernel |
+| ---      |  ---: |   ---: |       ---: |
+| graspan  |  684s |  8640s |    42840s* |
+| toad-row | 3.88s | 11.30s |     25.67s |
+| toad-col | 3.47s | 11.94s |     23.09s |
+| datafrog | 1.30s |  4.06s |      8.03s |
+
+| aliasing |  httpd |   psql | lnx_kernel |
+| ---      |   ---: |   ---: |       ---: |
+| graspan  |   8.4h |  6.0h* |      1.7h* |
+| toad-row | 28.21s | 28.25s |      7.62s |
+| toad-col | 19.39s | 21.96s |      9.48s |
+| datafrog |    UNK |    UNK |        UNK |
+
+Strictly speaking, the "toad-row" numbers are with one optimization held back, to make the numbers "apples to apples".
+We'll work on introducing that optimization to the layered trie, and when we do we'll update the comparison chart.
+
+Caveats aside, the numbers are sometimes better, sometimes worse.
+We will try and call out the reasons when we look at the implementation, but there will always be situations where the row-oriented approach is better than column-oriented.
+In the fullness of time we should be able to hybridize them, but for the moment we are going all in on layer tries, and columns!
+
+#### Abstraction
+
+The first thing I did (narrator: it was the last thing he did) was find an abstraction that would work for both the row and column orientations.
+We would like to represent a container of facts; what better than a `FactContainer` trait?
+```rust
+/// A type that can contain and work with facts.
+pub trait FactContainer : Default + Sized {
+    /// Forms a container from a list of facts.
+    fn form(facts: &mut Facts) -> Self;
+    /// Number of facts in the container.
+    fn len(&self) -> usize;
+    /// True when the number of facts is zero.
+    fn is_empty(&self) -> bool { self.len() == 0 }
+    /// Applies an action to each contained fact.
+    fn apply<'a>(&'a self, action: impl FnMut(&[<Terms as Container>::Ref<'a>]));
+    /// Joins `self` and `other` on the first `arity` columns, putting projected results in `builders`.
+    fn join<'a>(&'a self, other: &'a Self, arity: usize, projections: &[&[Result<usize, String>]], builders: &mut [FactBuilder<Self>]);
+    /// Builds a container of facts present in `self` but not in any of `others`.
+    fn except<'a>(self, others: impl Iterator<Item = &'a Self>) -> Self where Self: 'a;
+    /// Builds a container of facts present in `self` or `other`.
+    fn merge(self, other: Self) -> Self;
+}
+```
+There are a few terms in here that may be unfamiliar, including `Terms` itself, and others like `Facts` and `FactBuilder`, and perhaps just general confusion.
+When we discuss the methods in context, it may become clearer.
+
+The last three methods are the workhorses for Datalog evaluation: `join`, `except`, and `merge`.
+The methods generally are in order of the fact container lifecycle, and they'll tell a good story if we approach them in order.
+
+#### What is a Layered Trie?
+
+I'm not sure this is the best name, and it's quite possible they already have a different name.
+[Radix tree](https://en.wikipedia.org/wiki/Radix_tree) is the *coolest* name I've heard, but this version has a few more opinions about the layout (possibly unhelpful ones, but we'll see).
+
+To understand what these things are about, let's think about our sorted row-oriented representation, whose rows might look like:
+```
+[ a0,  b0,  c0 ]
+[ a0,  b0,  c1 ]
+[ a0,  b1,  c1 ]
+[ a0,  b1,  c2 ]
+[ a1,  b0,  c1 ]
+[ a1,  b0,  c2 ]
+       ...
+```
+
+The first column is just plain sorted, and has values in increasing order.
+In the example above, we only see two values `a0` and `a1`; everything else is the detail filling in the other two columns.
+In the second column, the values are sorted *for each distinct value of the first column*.
+Generally, the values of each column are sorted for each distinct assignment to the preceding columns.
+
+We could suppress the duplication of values, and just remember that they haven't changed from the prior row.
+Something a bit like:
+```
+[ a0,  b0,  c0 ]
+[ ..,  ..,  c1 ]
+[ ..,  b1,  c1 ]
+[ ..,  ..,  c2 ]
+[ a1,  b0,  c1 ]
+[ ..,  ..,  c2 ]
+       ...
+```
+
+We could write down the distinct values of each column, and their number of repetitions before the next value.
+We could do that, but we won't.
+We'll do something similar instead, but easier to work with, from my point of view.
+
+Each column will be a list of lists of values.
+Each list will be the sorted distinct values of its column, corresponding to one distinct prefix (setting of previous columns).
+Each column will have some number of lists, and some number of total items in the list.
+The number of lists for one column will equal the number of total items of the previous column.
+
+If you rotate your monitor 90 degrees clockwise, the figure above looks like a tree, and each of the columns is a layer in that tree.
+For reasons of obstinateness, we aren't going to use a tree, and will just use columns instead.
+But keep in the back of your head that you could probably do a better job by embracing the tree nature, and you'll end up with something a bit like a b-plus tree.
+
+This representation is often more compact than rows, by suppressing the redundancy, but it can also be more efficient to search, join, and otherwise work with.
+Whereas we have previously searched for some query row `[a, b, c]` in our row list using binary search, the trie allows us to search for `a` within only the distinct values of that first column, then for `b` within the distinct values of the second column for our `[a]`, and then for `c` within the distinct values for our `[a, b]`.
+
+This benefit extends to `join`, `except`, and `merge`, which each want to "align" multiple collections, by a prefix of their columns.
+Two collections that are each in the layered trie form are relatively easy to align, going column at a time and tracking prefixes that match in each.
+This is hand-wavy, and we'll get in to the specifics when we look at the implementations.
+
+By going column at a time, we only ever have a small region to search in.
+The trade-off is that if there aren't that many distinct values in the first place, perhaps just one at each column after the first, you'd really rather just see the whole row rather than have it revealed piecemeal.
+
+#### Implementing `FactContainer`
+
+The first method to implement is `form(&mut Facts)`, which creates a layered trie from a list of facts.
+The `Facts` type is just our row-oriented list of facts, and is what we use (for the moment) as a starting point for facts.
+
+The implementation is available in the repo, it's about ~25 lines, but it has a bit more jargon in it than I'd like to talk through.
+Informally, the implementation watches the sequence of rows go past, and will form lists in each of the columns as they do.
+The method checks each row for the first column in which it differs from the previous row, then pushes that value into the list-in-progress in its column, and then seals up the lists in all subsequent columns and pushes the rows values into those to start new lists.
+
+It's a pretty straightforward implementation, with the costs being a mix of 1. sorting the rows in the first place, and 2. demultiplexing the values of each row into columns.
+This is relatively more expensive than the row-oriented container, but we are making an inventment in our future.
+
+---
+
+The `len(&self)` function is pretty simple: it looks at the last layer of the trie, and returns the total number of values.
+
+---
+
+This brings us to the `apply` function, which applies some `action` to each row represented by the layered trie.
+
+There is a natural recursive approach we could write, descending the tree layer by layer, carrying each prefix on the stack until we reach the last layer, at which point we can act.
+We'll do this, but with a transformation from recursion to iteration, by maintaining an explicit stack.
+We'll use `ranges: Vec<(usize, usize)>` to hold the active intervals for each layer, and work with the tip of this list, pushing new ranges on and popping them off as we complete work.
+
+```rust
+/// From `layer` at position `index`, apply `action` to all extensions.
+fn apply<'a>(&'a self, mut action: impl FnMut(&[<Terms as Container>::Ref<'a>])) {
+
+    if self.layers.is_empty() { return; }
+
+    // A call stack of ranges for each layer.
+    let mut ranges = Vec::with_capacity(self.layers.len() - layer);
+    // Values for each layer. As above, pushed onto and popped from.
+    let mut values = Vec::with_capacity(self.layers.len() - layer);
+
+    // Peer into the void and decide to process all initial values.
+    ranges.push(self.layers[0].list.bounds.bounds(0));
+
+    // We repeatedly progress the work atop `ranges`.
+    while let Some((lower, upper)) = ranges.last_mut() {
+        if lower < upper {
+            // If this is the last layer, blast through actions.
+            if values.len() == self.layers.len() - 1 {
+                let borrow = self.layers.last().unwrap().borrow();
+                for index in *lower .. *upper {
+                    values.push(borrow.values.get(index));
+                    action(&values[..]);
+                    values.pop();
+                }
+                ranges.pop();
+                values.pop();
+            }
+            // Otherwise, discover and enqueue the next layer of work.
+            else {
+                let depth = values.len();
+                let bounds = self.layers[depth+1].list.bounds.bounds(*lower);
+                values.push(self.layers[depth].borrow().values.get(*lower));
+                *lower += 1;
+                ranges.push(bounds);
+            }
+        }
+        else {
+            ranges.pop();
+            values.pop();
+        }
+    }
+}
+```
+
+This code is something you can stare at for a while.
+I certainly have.
+It's very possible it has bugs still.
+Let's not obsess over it, and just take with us the idiom of using a stack to track the bounds we are actively working on for each layer.
+
+---
+
+The next functions will be `join`, `except`, and `merge`.
+They will all rely on a common helper method, which we'll introduce first.
+```rust
+/// Aligns the matching prefixes of `self` and `other`, through layer `arity`.
+///
+/// Each consequential moment is provided to `action`, including ranges in layers
+/// where matches do not happen. The action is allowed to react as appropriate in
+/// each case.
+fn align<'a, F>(&'a self, other: &'a Self, arity: usize, mut action: F)
+where
+    F: FnMut(&[<C as Container>::Ref<'a>], std::cmp::Ordering, (usize, usize)),
+{
+    unimplemented!()
+}
+```
+The `align` method takes two instances of `Self`, both with at least `arity` layers, and it will attempt to find matching prefixes of length at most `arity`.
+More concretely, starting from the empty prefix, in common to any non-empty inputs, it assesses the extensions of each prefix in common, either discovering a range where they are not in common, or continuing deeper.
+The `action` is called on a prefix common to the inputs, but the second argument explains what it found:
+1. `Ordering::Less`: the `(lower, upper)` integers that follow are a range of values in the next layer (after `prefix.len()`) that are exclusively in `self`.
+2. `Ordering::Greater`: the `(lower, upper)` integers that follow are a range of values in the next layer (after `prefix.len()`) that are exclusively in `other`.
+3. `Ordering::Equal`: the prefix of length `arity` is common to both inputs, and the integers that follow are the positions of the final values in the `arity` layer.
+
+In seeking out aligned prefixes, the first two responses indicate where the trail went cold, and the third indicates where a match has been found.
+Each of our `join`, `except`, and `merge` methods will use this logic, but take different actions in each of these cases.
+
+The implementation of `align` is very similar to `apply`.
+We'll maintain a stack of pairs of ranges, each pair in the stack describing ranges in the correspond layers of `self` and `other`.
+We continually develop the ranges at the top of the stack, and for as long as both are non-empty we compare their first element, and either advance whichever is lower and invoke `action`, or if equal either enqueue the value and next layer bounds or invoke `action` if we are at the last layer.
+
+---
+
+The `join` method uses `align`, looking for instances of `Ordering::Equal`, indicating that a full match was found.
+When this occurs it means we have a join match, and only need to unpack the remaining values in each of the inputs, and cross join them.
+The present implementation, which I don't love, looks like
+```rust
+// Allocations to stash the post-`arity` extensions for each of `self` and `other`.
+let mut extensions0: Vec<<Terms as Container>::Ref<'a>> = Vec::with_capacity(self.layers.len() - arity);
+let mut extensions1: Vec<<Terms as Container>::Ref<'a>> = Vec::with_capacity(other.layers.len() - arity);
+
+self.align(other, arity, |prefix, order, (index0, index1)| {
+    if let std::cmp::Ordering::Equal = order {
+
+        // TODO: Project away columns not referenced by any projection.
+        self.apply_core(arity, index0, |list| Extend::extend(&mut extensions0, list.into_iter().cloned()));
+        other.apply_core(arity, index1, |list| Extend::extend(&mut extensions1, list.into_iter().cloned()));
+        extensions0.sort(); extensions0.dedup();
+        extensions1.sort(); extensions1.dedup();
+
+        let width0 = self.layers.len() - arity;
+        let width1 = other.layers.len() - arity;
+
+        assert!(extensions0.len() / width0 > 0);
+        assert!(extensions1.len() / width1 > 0);
+
+        // TODO: Pivot the logic to be builders first, then columns, then rows.
+        for idx0 in 0 .. (extensions0.len() / width0) {
+            let ext0 = &extensions0[idx0 * width0 ..][.. width0];
+            for idx1 in 0 .. (extensions1.len() / width1) {
+                let ext1 = &extensions1[idx1 * width1 ..][.. width1];
+                for (projection, builder) in projections.iter().zip(builders.iter_mut()) {
+                    builder.push(projection.iter().map(|i| match i {
+                        Ok(col) => {
+                            if *col < arity { prefix[*col].as_slice() }
+                            else if *col < arity + ext0.len() { ext0[col - arity].as_slice() }
+                            else { ext1[col - ext0.len() - arity - arity].as_slice() }
+                        }
+                        Err(lit) => lit.as_bytes()
+                    }));
+                }
+            }
+        }
+
+        // Tidy up after ourselves.
+        extensions0.clear();
+        extensions1.clear();
+    }
+});
+```
+
+The sneaky thing we are doing here is invoking a modified `apply` that is able to start `arity` columns in, at position `index`, and will read out the extensions from that point just as `apply` reads out a whole collection.
+Otherwise, this is very similar to the row-oriented implementation: for each match find all extensions, and then follow the instructions about which columns to put into which fact builder.
+
+I don't love how this has a bunch of conditional logic in the innermost loops.
+My guess is that this is one of the opportunities to improve the performance, and we'll see if that's right.
+
+---
+
+The `except` method produces a collection containing the tuples of `self` that are not present in the list of other fact container arguments.
+We'll iterate through the other containers, invoking a binary `except` for each of them and rebuilding `self` with each iteration.
+The binary `except` uses `align`, and specifically looks for moments when the tuples are exclusive to `self`.
+```rust
+/// Produce a forest containing everything from `self` not in any of `others`.
+fn except<'a>(mut self, others: impl Iterator<Item = &'a Self>) -> Self where Self: 'a {
+    for other in others {
+        let old_len = self.len();
+        assert_eq!(self.layers.len(), other.layers.len());
+        let mut builder = TrieBuilder::with_layers(self.layers.len());
+        self.align(other, self.layers.len(), |prefix, order, (lower, upper)| {
+            if let std::cmp::Ordering::Less = order {
+                builder.graft(prefix, lower, upper, &self.layers[prefix.len()..]);
+            }
+        });
+        self = builder.done();
+    }
+    self
+}
+```
+
+I've gone againd and used new code, this time a `TrieBuilder` with a `graft` method.
+This is a specialized builder for layered tries, which gets provided with a prefix and a position in the remaining layers from which to copy in.
+The prefixes and extensions are in-order, as we are moving through `self` in order, and the builder just staples all of the arguments together into one new layered trie.
+
+This version does go other-by-other, whereas our row implementation does them all at once.
+I'm not sure there is a massive difference between the approaches, and it is much easier to write this one.
+We'll investigate further if this ends up being a problem.
+
+---
+
+Finally, the `merge` function also uses `align`, much like `except` except that it makes a different call about what to do for each case.
+```rust
+fn merge(self, other: Self) -> Self {
+    if self.is_empty() { return other; }
+    if other.is_empty() { return self; }
+
+    let mut builder = TrieBuilder::with_layers(self.layers.len());
+    self.align(&other, self.layers.len(), |prefix, order, (lower, upper)| {
+        match order {
+            std::cmp::Ordering::Less => {
+                builder.graft(prefix, lower, upper, &self.layers[prefix.len()..]);
+            }
+            std::cmp::Ordering::Equal => {
+                builder.graft(prefix, lower, lower+1, &self.layers[prefix.len()..]);
+            }
+            std::cmp::Ordering::Greater => {
+                builder.graft(prefix, lower, upper, &other.layers[prefix.len()..]);
+            }
+        }
+    });
+    builder.done()
+}
+```
+Very similar, except in this case it always pushes content into the trie builder.
+The way to think about it is that when ranges are exclusive it copies them over, and when an exact match is found it copies it in only once.
+This could also be a moment where it "aggregates" the value from `self` and `other` for matching prefixes, were we to use a more load-bearing meaning of a tuple than "present".
+
+---
+
+These are all the bits of logic we need to write!
+With this code written, things run with a simple toggle between the row container and the column container.
+Everything does seem to run and produce the correct answers, but it's hard to be certain with the limited workload I'm using: all queries are binary joins on one shared attribute.
+More extensive testing notwithstanding, let's discuss the performance and where to go next!
+
+#### Performance
+
+We saw some raw numbers back up top, but let's say a bit about where the time goes and whether we can fix any of it.
+I'm typing this not actually knowing what the answer will be, and .. perhaps it all just fizzles out.
+In that case, we've already got a few performance wins and have halved the memory use, which is great.
+The trie representation is also the first step to worst-case optimal joins, up soon!
+
+The first performance thing I looked at was our sneaky trick of noticing that many `[u8]` are actually `[u8; 4]`.
+When we have the opportunity to notice, changing the data to have a fixed width can dramatically improve the performance.
+Informally, this is a bit like going from variable-length text back to `u32` values.
+
+I added a method to our layered trie that can `upgrade` a list of layers into a list of layers with `[u8; 4]` type, if they all have exactly that length.
+I also added a `downgrade` method to go in the other direction, which is harder as you need to convert a `Vec<[u8;4]>` to a `Vec<u8>`.
+In principle a `std::mem::transmute` would make quick work of this, but I went with `flatten().collect()` because screw `unsafe`.
+
+I was able to adopt this behavior easily for `except` and `merge`, and .. `join` is being a bit more difficult.
+Getting Rust to agree that I have all the right types is hard, in part because I 100% do not have all the right types and Rust likes to say so.
+But even with just `except` and `merge`, performance improves!
+
+I've included numbers from the row-oriented version that has the same optimization for `merge`, held back before.
+It doesn't have `except` optimized, because it was too complicated.
+
+| dataflow | httpd |   psql | lnx_kernel |
+| ---      |  ---: |   ---: |       ---: |
+| graspan  |  684s |  8640s |    42840s* |
+| toad-row | 3.88s | 11.30s |     25.67s |
+| ^-- +opt | 3.11s |  9.49s |     19.83s |
+| toad-col | 3.47s | 11.94s |     23.09s |
+| ^-- +opt | 2.55s |  9.13s |     15.95s |
+| datafrog | 1.30s |  4.06s |      8.03s |
+
+| aliasing |  httpd |   psql | lnx_kernel |
+| ---      |   ---: |   ---: |       ---: |
+| graspan  |   8.4h |  6.0h* |      1.7h* |
+| toad-row | 28.21s | 28.25s |      7.62s |
+| ^-- +opt | 23.31s | 23.08s |      6.73s |
+| toad-col | 19.39s | 21.96s |      9.48s |
+| ^-- +opt | 14.26s | 16.45s |      8.33s |
+| datafrog |    UNK |    UNK |        UNK |
+
+As you can see, the optimizations help both row and column.
+What we haven't explored here is that the optimizations will be much more helpful for columns in the long run, because we can perform the optimization on a column-by-column basis.
+For each column, we only need to find the `K` such that the terms are `[u8; K]`, whereas for rows we need to find one `K` such that each row is `[[u8; K]]`.
+Some columns will be fixed width, some will be text or JSON or something not quite as agreeable.
+
+At the moment, about two thirds of the time is taken under `join`.
+I figure there's at least another 2x to gain by optimizing it further, and I have some ideas there (some mentioned above) but nothing worth reporting on yet.
+Or rather, I am able to report that by blasé attempt to re-order the inner loops resulted in no measureable improvement.
+Oops.
 
 ## Spilling facts to disk
 
