--- a/posts/2025-08-24.md
+++ b/posts/2025-08-24.md
@@ -128,12 +128,42 @@ struct Layer<T> {
 ```
 This looks very similar to the shape we had above for `ByteLists`, but .. it's totally different I'm so sorry.
 
-What a `Layer<T>` records are the various ways we can extend a tuple of values with some new value `T`, resulting in a tuple of one greater dimension.
-We'll start with the empty tuple `()` in mind, followed by:
-1. The first layer has a single list which are the distinct values we could start with.
-1. The second layer has as many lists as the first has values, and each list contains the distinct values that can be appended to the corresponding tuple.
-1. The next layer has as many lists as the second has values, and each lists contains the distinct values that can be appended to the corresponding tuple.
-1. ...
+Each layer contains the lists that represent the ways we can extend various prefixes of facts.
+Concretely, layer `i`'s `j`th list contains the values that can be appended to the `j`th distinct prefix of the first `i` attributes.
+That is too much for me to understand, and I wrote it.
+Let's look at an example.
+
+Here is a sorted list of rows, each containing three columns of potentially different types let's say.
+```
+(A, 1, x),
+(A, 1, y),
+(A, 1, z),
+(A, 2, x),
+(A, 3, x),
+(A, 3, y),
+(B, 2, z),
+(C, 1, x),
+(C, 2, x).
+```
+
+Layer 0 would contain lists of elements from `{ A, B, C }` that can extend the distinct length-0 prefixes.
+There's only one length-0 prefix: `()`, so there's only one list.
+That list contains `[A, B, C]`, because those are the distinct values that extend `()` in our set..
+
+Layer 1 would contain lists of elements from `{ 1, 2, 3 }` that can extend the distinct length-1 prefixes.
+There are three length-1 prefixes: `(A)`, `(B)`, and `(C)`, so there would be three lists.
+Those three lists are `[1, 2, 3]`, `[2]`, and `[1, 2]`, because they are the distinct values that extend `(A)`, `(B)`, and `(C)` respectively.
+
+Layer 2 would contain lists of elements from `{ x, y, z }` that can extend the distinct length-2 prefixes.
+There are six length-2 prefixes, because those are the total number of list items in layer 1.
+Those six lists are `[x, y, z]`, `[x]`, `[x, y]`, `[z]`, `[x]`, and `[x]`, because they are the distinct values that extend the six distinct length-2 prefixes..
+
+Our columnar trie has three layers, and they look like
+```
+layer 0: [[A, B, C]],
+layer 1: [[1, 2, 3], [2], [1, 2]],
+layer 2: [[x, y, z], [x], [x, y], [z], [x], [x]].
+```
 
 Each layer has as many lists as the previous had total list items, and each list indicates the distinct ways to extend the tuple, or "path through the layers".
 Eventually there is a last layer, and we just stop there with whatever tuples we end up with.
