Andersen and Dyck

--- a/posts/2025-12-14.md
+++ b/posts/2025-12-14.md
@@ -61,7 +61,8 @@ I should be able to for `csda` and `cspa`, but I'll likely need to reach out to 
 | CSPA      | httpd     |  0.1s | 27.9s |     67.8s |     14.4s |
 | CSPA      | linux     |  0.6s |  8.3s |     20.9s |      4.8s |
 | CSPA      | postgresql|  0.3s | 29.8s |     76.7s |     15.0s |
-| Andersen  | **ALL**   |       | **?** |         - |         - |
+| Andersen  | medium    |  2.8s |  2.2s |      7.9s |      4.2s |
+| Andersen  | large     |  5.5s |  4.6s |     16.0s |      5.7s |
 | Dyck      | **ALL**   |       | **?** |         - |         - |
 | Galen     | galen     |  0.1s | 11.9s |     32.2s |      8.7s |
 | CRDT      | **ALL**   |       | **?** |         - |         - |
@@ -131,6 +132,14 @@ It should be fixed.
 
 Not much more to say until I fix this, but it's a great example of how when other folks choose the problems, you learn a lot more about the limitations.
 
+### Query literals aren't there yet
+
+The Dyck problem is broken for me because where it ingests `0u32` and `1u32` literals from the inputs, I don't know that I can put these literals in a datatoad program.
+We use `str` literals, rather than `[u8]` literals, for the obvious data entry reasons.
+At the same time, this means that you can't match all byte-slice literals that could come from input files.
+
+Not so surprising in retrospect, but I will need to ponder a way to resolve these.
+
 ### Is datatoad amazing?
 
 The numbers are small, but it's worth calling out that it doesn't do anything other than Datalog.
@@ -145,8 +154,6 @@ Also if you don't check the correctness of the results.
 ## Up next
 
 I'm certainly going to study the results a fair bit more.
-
-I think datatoad can currently handle `andersen` and `dyck`; they are just new to me.
 
 This work was kicked off because I introduced initial support for antijoins and the structure for function-based predicates (e.g. `x < y`, but also `x <= y < z`, `x + y = z`, and other "function-backed relations").
 Many of the problems towards the bottom of the list rely on both antijoins and inequalities, and I'll need to implement them correctly to even see numbers.
